Entity to DTO Mapping Util,ImgBBService,Service, Controller Section, API Testing, img size

--- a/hotelparadiseinn/src/main/resources/application.properties
+++ b/hotelparadiseinn/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+imgbb.api.key=952f2276417bfd9b0b4629febdc3c86d
+
+admin.secret.key=208T1A0560
+
+#THE MAXIMUM SIGN OF IMAGE THAT CAN BE UPLOADED
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
